support OpenJDK 17