@@ -37,6 +37,14 @@ run {
     }
 }
 
+test {
+    // This is reuiqred for OpenJDK 17
+    jvmArgs += [
+        '--add-opens=java.base/java.nio=ALL-UNNAMED',
+        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+    ]
+}
+
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:deprecation"
 }
